invalid_no_arg_keywords_test/invalid_no_arg_keywords_test_4.src
.IPPcode24
RETURN GF@d